Support TCP sockets instead of named pipes for run I/O  (#117)
