# cli/integrationtest/expected_openapi_spec.yaml
@@ -573,6 +573,11 @@ components:
       properties:
         buffers:
           $ref: '#/components/schemas/BufferParameters'
+        sockets:
+          type: array
+          items:
+            $ref: '#/components/schemas/Socket'
+          nullable: true
       additionalProperties: false
     JobRunCodeTarget:
       type: object
@@ -708,6 +713,19 @@ components:
           type: array
           items:
             type: string
+          nullable: true
+      additionalProperties: false
+    Socket:
+      type: object
+      properties:
+        port:
+          type: integer
+          format: int32
+        inputBuffer:
+          type: string
+          nullable: true
+        outputBuffer:
+          type: string
           nullable: true
       additionalProperties: false
     WorkerCodespec:
